--- a/src/provider/package.json
+++ b/src/provider/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "node-datachannel": "^0.5.3",
     "robotjs": "^0.6.0",
-    "socket.io-client": "^4.7.4"
+    "@local/common": "../common"
   }
 }
