--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,9 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "node-datachannel": "^0.5.3",
-    "robotjs": "^0.6.0",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io": "^4.7.4"
   }
 }
