--- a/src/server/package.json
+++ b/src/server/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.533.0",
+    "axios": "^1.6.7",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.4"
   }
 }
